--- a/src/components/react_dates_overrides.css
+++ b/src/components/react_dates_overrides.css
@@ -117,11 +117,15 @@
   height: 320px !important;
 }
 
-
 .DateInput_fangStroke{
   display: none;
 }
 
 .DayPickerNavigation_button{
   border: none;
+}
+
+.DayPickerNavigation_button:hover {
+  border: none;
+  outline: none;
 }
